frontend/test/should_fail/newAttributeInitializer2.grg
#using "new.gm"

rule r
{
	modify {
	---
		def ref bf:Barfuss = new Barfuss@(i=42,s="Hallo Welt",d=3.141592654);
		
		exec( { yield bf = new Barfuss@(j=42) } );
	}
}